# OGC_Sim

./: .gitignore  CLAUDE.md  PLAN.md  README.md  codes_references  count_vertices.py  pyproject.toml  requirements.txt  run_server.sh
examples/: example_algorithm1.py  example_algorithm2.py  example_algorithm3.py  example_algorithm4.py
explore/: README.md
explore/m1/: m1_bvh.py  m1_distance.py  m1_gauss_map.py  m1_mesh.py
explore/m2/: edge_distance.py  learn_algorithm1.py  learn_algorithm1_self.py  learn_algorithm2.py  learn_algorithm3.py  learn_algorithm4.py  m2_detection.py  m2_offset_geometry.py  triangle_distance.py
ogc_sim/algorithms/: __init__.py  algorithm1.py  algorithm2.py  algorithm3.py  algorithm4.py
ogc_sim/contact/: bounds.py  detection.py  detection_gpu.py  distance_gpu.py  energy.py  offset_geometry.py
ogc_sim/geometry/: __init__.py  bvh.py  distance.py  gauss_map.py  mesh.py
ogc_sim/io/: __init__.py  exporter.py  loader.py
ogc_sim/sim/: __init__.py  config.py  frame.py  runner.py
ogc_sim/solver/: vbd.py  vbd_gpu.py
server/: main.py
server/static/: index.html
tests/: test_distance.py  test_energy.py  test_gauss_map.py
